feat:added flags search and list.

--- a/app/flags/flags-list/flags-list.component.html
+++ b/app/flags/flags-list/flags-list.component.html
@@ -1,1 +1,18 @@
-<p>flags-list works!</p>
+<div class="flags__list">
+
+  <div class="flags__list__card">
+    <picture>
+      <img  src="favicon.ico" loading="lazy" />
+    </picture>
+    <div class="flags__list__info">
+      <h2 class="flags__list__info-republic">Republic of Cyprus</h2>
+      <p class="flags__list__info-desc"><span>Population:</span> 1,207,361</p>
+      <p class="flags__list__info-desc" >Region:<span>Europe</span></p>
+      <p class="flags__list__info-desc" >Region:<span>Europe</span></p>
+      <p class="flags__list__info-desc" >subRegion:<span>Europe</span></p>
+      <p class="flags__list__info-desc" >subRegion:<span>Europe</span></p>
+    </div>
+  </div>
+
+
+</div>
