--- a/app/flags/flags.component.html
+++ b/app/flags/flags.component.html
@@ -1,15 +1,14 @@
 <div class="flags">
 
-  <div class="flags--header">
+  <div class="flags-header">
     <app-flags-header />
   </div>
 
-  <div class="flags--search">
+  <div class="flags-search">
     <app-flags-search />
-  </div>
-
-  <div class="flags--list">
     <app-flags-list />
   </div>
+
+
 
 </div>
