--- a/app/flags/flags-list/flags-list.component.scss
+++ b/app/flags/flags-list/flags-list.component.scss
@@ -26,6 +26,6 @@
   }
   &__card:hover {
     transform: scale(1.05);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.25);
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.25);
   }
 }
