feat:added skeleton and search.

--- a/app/flags/flags-list/flags-list.component.html
+++ b/app/flags/flags-list/flags-list.component.html
@@ -4,7 +4,7 @@
       <img src="{{flags.flags.svg}}" loading="lazy"   alt="{{flags.flags.alt}}"/>
     </picture>
     <div class="flags__list__info">
-      <h2 class="flags__list__info-republic">Republic of Cyprus</h2>
+      <h2 class="flags__list__info-republic">{{flags.name.common}}</h2>
       <p class="flags__list__info-desc"><span>Population:</span> 1,207,361</p>
       <p class="flags__list__info-desc" >Region:<span>Europe</span></p>
       <p class="flags__list__info-desc" >Region:<span>Europe</span></p>
