--- a/app/flags/flags.component.scss
+++ b/app/flags/flags.component.scss
@@ -7,3 +7,10 @@
     height: 100vh;
   }
 }
+.skeleton {
+  display: grid;
+  grid-template-columns: repeat(auto-fill,300px);
+  gap: 2.8em 1em;
+  padding: 1.5rem;
+  justify-content: center;
+}
