feat:added region filter thing.

--- a/app/flags/flags-list/flags-list.component.html
+++ b/app/flags/flags-list/flags-list.component.html
@@ -5,11 +5,9 @@
     </picture>
     <div class="flags__list__info">
       <h2 class="flags__list__info-republic">{{flags.name.common}}</h2>
-      <p class="flags__list__info-desc"><span>Population:</span> 1,207,361</p>
-      <p class="flags__list__info-desc" >Region:<span>Europe</span></p>
-      <p class="flags__list__info-desc" >Region:<span>Europe</span></p>
-      <p class="flags__list__info-desc" >subRegion:<span>Europe</span></p>
-      <p class="flags__list__info-desc" >subRegion:<span>Europe</span></p>
+      <p class="flags__list__info-desc"><span>Population:</span> {{flags.population}}</p>
+      <p class="flags__list__info-desc" >Region:<span>{{flags.region}}</span></p>
+      <p class="flags__list__info-desc" >capital:<span>{{flags.capital}}</span></p>
     </div>
   </div>
 </div>
