--- a/app/flags/flags.component.html
+++ b/app/flags/flags.component.html
@@ -4,13 +4,21 @@
     <app-flags-header></app-flags-header>
   </div>
 
-  <div class="flags-search">
+  <div class="flags__search">
     <app-flags-search (inputValue)="getFlags($event)"></app-flags-search>
-    <div *ngIf="(skeleton | async)" class="skeleton">
+    <div *ngIf="(skeleton | async)" class="flags__search-skeleton">
       <ng-container *ngFor="let _ of [].constructor(8); let i = index">
         <app-skeleton></app-skeleton>
       </ng-container>
     </div>
       <app-flags-list [flag]="flags$ | async"></app-flags-list>
+
+    <div class="flags__search-error" *ngIf="isError">
+
+    <img src="assets/flags/404.jpg">
+      <h2>Flags not Found!</h2>
+    </div>
   </div>
+
+
 </div>
