--- a/app/flags/skeleton/skeleton.component.scss
+++ b/app/flags/skeleton/skeleton.component.scss
@@ -8,7 +8,7 @@
     padding: 0.5em 1.2em;
     &-republic, &-desc  {
       color: var(--text);
-      background-color: #e7f1f9;
+      background-color: var(--skeleton-color);
       filter: blur(1px);
        width: 260px;
       height: 20px;
@@ -23,7 +23,7 @@
     &-img {
       width: 100%;
       height: 148px;
-      background-color: #e7f1f9;
+      background-color: var(--skeleton-color);
       filter: blur(1px);
     }
     &-desc {
