feat:added pagination

--- a/app/flags/flags-details/flags-details.component.html
+++ b/app/flags/flags-details/flags-details.component.html
@@ -1,5 +1,5 @@
 <div class="details" >
-    <button class="details__go-back">
+    <button class="details__go-back" (click)="goBack()">
       Go Back
     </button>
 
