--- a/app/flags/flags-list/flags-list.component.scss
+++ b/app/flags/flags-list/flags-list.component.scss
@@ -1,3 +1,7 @@
+pagination-controls {
+  display: flex;
+  justify-content: center;
+}
 .flags__list {
   display: grid;
   grid-template-columns: repeat(auto-fill,300px);
