feat:added new things

--- a/app/flags/flags-details/flags-details.component.html
+++ b/app/flags/flags-details/flags-details.component.html
@@ -17,7 +17,7 @@
         <p>currencies: {{flag.currencies}}</p>
         <span class="details__main__info-borders">borders:  </span>
         <div  class="details__main__info-borders-border">
-          <span *ngFor="let  border of flag.borders" (click)="getBorder(border)">{{border}}</span>
+          <span *ngFor="let  border of flag.borders">{{border}}</span>
         </div>
       </div>
 
